# llm-security-benchmarking

./: .env.example  README.md  dvc.yaml  params.yaml  pyproject.toml
.dvc/: config
.github/workflows/: pipeline.yml
assets/: cve_db.json  injections.jsonl  injections_backup.jsonl
scripts/: agents.py  aggregate.py  evaluate.py  servers.py  upload.py
