[project]
name = "llm-security-benchmarking"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "dvc>=3.0",
    "pyyaml>=6.0",
    "boto3>=1.35",
    "python-dotenv>=1.0",
    "dvc-s3>=3.3.0",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "pydantic-ai>=0.0.15",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
]
